spacing issues

--- a/app/components/t&c/Content.module.css
+++ b/app/components/t&c/Content.module.css
@@ -1,5 +1,5 @@
 .content_tc {
-    padding: 200px 0 450px;
+    padding: 200px 0 100px;
 }
 
 .content_tc h1 {
